# pico-team20

./: Assignment - BlackBox and WhiteBox.docx  CMakeLists-Seth.txt  CMakeLists.txt  README.md  htmldata.c  main.c  sd_card.c
WebServer/: CMakeLists.txt  cgi.h  htmldata.c  main.c  makefsdata.py  ssi.h
WebServer/html_files/: index.shtml
WebServer/html_files/downloads/: packet_0.txt  packet_5.txt  packet_8.txt
driver/wifi/: CMakeLists.txt  cmake_install.cmake  lwipopts_examples_common.h  picow_access_point.c  picow_monitor_mode.c
html_files/: index.shtml
monitor_mode/: CMakeLists.txt  cmake_install.cmake  picow_monitor_mode.c  setup monitor mode.txt
pico-nexmon/: CMakeLists.txt
pico-nexmon/cyw43-driver/src/: cyw43.h  cyw43_ctrl.c
pico-nexmon/i2c_slave/: CMakeLists.txt
pico-nexmon/monitor_mode/: CMakeLists.txt
pico-nexmon/nexmon/buildtools/scripts/: flashpatches.bcm43596.mk.awk  flashpatches.bcm4366.mk.awk  flashpatches.bcm4375.mk.awk  flashpatches.bcm4389.mk.awk  flashpatches.mk.awk  nexmon.mk.2.awk
pico-nexmon/pico-sdk/lib/cyw43-driver/src/: cyw43_lwip.c
pico-nexmon/script/: patch
pico-nexmon/wifi/: CMakeLists.txt  picow_access_point.c
pico-rmii-ethernet/: CMakeLists.txt
pico-rmii-ethernet-honeypot/: README.md
pico-rmii-ethernet-honeypot/examples/httpd/: main.c
pico-rmii-ethernet-honeypot/i2c_slave/: CMakeLists.txt
pico-rmii-ethernet-honeypot/src/: rmii_ethernet_phy_rx.pio
pico-rmii-ethernet-httpoptions-icmpping/: CMakeLists.txt
pico-rmii-ethernet-httpoptions-icmpping/examples/httpd/: CMakeLists.txt  main.c
pico-rmii-ethernet-httpoptions-icmpping/src/: rmii_ethernet.c
pico-rmii-ethernet-httpoptions-icmpping/src/include/rmii_ethernet/: netif.h
pico-rmii-ethernet-httpoptions-icmpping/src/lwip/: sys_arch.c
pico-rmii-ethernet/examples/httpd/: CMakeLists.txt  main.c
pico-rmii-ethernet/src/: rmii_ethernet.c
sd_card/: CMakeLists.txt  FAT32_Format.txt
sd_card/sdcard/: CMakeLists.txt  sd_card.c
webdisplay/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cgi.h  cmake_install.cmake  htmldata.c  lwipopts.h  main.c  pico20Proj.dis  pico20Proj.elf  pico20Proj.elf.map  pico20Proj.hex  pico20Proj.uf2  ssi.h  ssi.h.bak  webdisplay.dis  webdisplay.elf  webdisplay.elf.map  webdisplay.hex  webdisplay.uf2
webdisplay/cyw43-driver/: CMakeCache.txt  Makefile  cmake_install.cmake  pico20Proj.dis  pico20Proj.elf  pico20Proj.elf.map  pico20Proj.hex  pico20Proj.uf2
webdisplay/cyw43-driver/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
webdisplay/cyw43-driver/elf2uf2/boot_uf2_headers/: Makefile
webdisplay/cyw43-driver/pico-sdk/: Makefile  cmake_install.cmake
webdisplay/cyw43-driver/pico-sdk/docs/: Makefile
webdisplay/cyw43-driver/pico-sdk/src/: Makefile  cmake_install.cmake
webdisplay/cyw43-driver/pico-sdk/src/common/: Makefile  cmake_install.cmake
webdisplay/cyw43-driver/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
webdisplay/cyw43-driver/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
webdisplay/cyw43-driver/pico-sdk/tools/: Makefile
webdisplay/cyw43-driver/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
webdisplay/cyw43-driver/src/: cyw43_ll.c
webdisplay/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
webdisplay/elf2uf2/boot_uf2_headers/: Makefile
webdisplay/html_files/: index.shtml
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/: CMakeCache.txt  Makefile  cmake_install.cmake
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/: Makefile  cmake_install.cmake
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/docs/: Makefile
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/src/: Makefile  cmake_install.cmake
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/src/common/: Makefile  cmake_install.cmake
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
webdisplay/no-OS-FatFS-SD-SPI-RPi-Pico/pico-sdk/tools/: Makefile
webdisplay/pico-sdk/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/docs/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/src/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/src/common/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/src/common/boot_picoboot/: Makefile
webdisplay/pico-sdk/src/common/boot_uf2/: Makefile
webdisplay/pico-sdk/src/common/pico_base/: Makefile
webdisplay/pico-sdk/src/common/pico_binary_info/: Makefile
webdisplay/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/src/common/pico_divider/: Makefile
webdisplay/pico-sdk/src/common/pico_stdlib/: Makefile
webdisplay/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
webdisplay/pico-sdk/tools/: Makefile  cmake_install.cmake
webdisplay/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
wifi_access_point/: CMakeLists.txt  main.c
(+293 files in other folders)
